--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,12 +6,16 @@ name: Docker
 # documentation.
 
 on:
+  schedule:
+    - cron: '0 10 * * *'
   push:
-    branches: [main]
-    # Publish semver tags as releases.
-    tags: ['v*.*.*']
+    branches:
+      - '**'
+    tags:
+      - 'v*.*.*'
   pull_request:
-    branches: [main]
+    branches:
+      - 'main'
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -61,9 +65,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images:
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            # type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
             type=schedule
             type=ref,event=branch
             type=ref,event=pr
